--- a/env.yaml
+++ b/env.yaml
@@ -9,3 +9,27 @@ dependencies:
   - python=3.9.1
   - requests=2.25.1
   - pymc>=4
+  - 'altair' 
+  - 'beautifulsoup4' 
+  -  'bottleneck' 
+  -  'cloudpickle' 
+  -  'conda-forge::blas=*=openblas' 
+  - 'h5py' 
+  -  'ipympl'
+  -  'ipywidgets'
+  -  'matplotlib-base' 
+  -  'numexpr' 
+  -  'openpyxl' 
+  -  'pandas' 
+  -  'patsy' 
+  -  'protobuf' 
+  -  'pytables' 
+  -  'scikit-image' 
+  -  'scikit-learn' 
+  -  'scipy' 
+  -  'seaborn' 
+  -  'sqlalchemy' 
+  -  'statsmodels' 
+  -  'sympy' 
+  -  'widgetsnbextension'
+  -  'xlrd' 
