--- a/env.yaml
+++ b/env.yaml
@@ -11,15 +11,16 @@ dependencies:
   - pymc>=4
   - 'altair' 
   - 'beautifulsoup4' 
-  -  'bottleneck' 
-  -  'cloudpickle' 
-  -  'conda-forge::blas=*=openblas' 
+  - 'bottleneck' 
+  - 'cloudpickle' 
+  - 'conda-forge::blas=*=openblas' 
   - 'h5py' 
-  -  'ipympl'
-  -  'ipywidgets'
-  -  'matplotlib-base' 
-  -  'numexpr' 
-  -  'openpyxl' 
+  - 'ipympl'
+  - 'ipywidgets'
+  - 'jupyter'
+  - 'matplotlib-base' 
+  - 'numexpr' 
+  - 'openpyxl' 
   -  'pandas' 
   -  'patsy' 
   -  'protobuf' 
