--- a/env.yaml
+++ b/env.yaml
@@ -8,3 +8,31 @@ dependencies:
   - pyopenssl=20.0.1
   - python=3.9.1
   - requests=2.25.1
+  - pymc>=4
+  - 'altair' 
+  - 'beautifulsoup4' 
+  - 'bottleneck' 
+  - 'cloudpickle' 
+  - 'conda-forge::blas=*=openblas' 
+  - 'h5py' 
+  - 'ipympl'
+  - 'ipywidgets'
+  - 'jupyter'
+  - 'jupyter_server'
+  - 'matplotlib-base'
+  - 'notebook'
+  - 'numexpr' 
+  - 'openpyxl' 
+  -  'pandas' 
+  -  'patsy' 
+  -  'protobuf' 
+  -  'pytables' 
+  -  'scikit-image' 
+  -  'scikit-learn' 
+  -  'scipy' 
+  -  'seaborn' 
+  -  'sqlalchemy' 
+  -  'statsmodels' 
+  -  'sympy' 
+  -  'widgetsnbextension'
+  -  'xlrd' 
