--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,15 +4,16 @@ jobs:
   publish-pymc3-docker:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name Check out the repo
+        uses: actions/checkout@v2
       - name: Login to Github Container Registry
-      - uses: docker/login-action@v1
+        uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
        - name: Build the Docker Image
-       - run: |
+         run: |
               docker build . --tag ghcr.io/cormach/pymx3-docker:latest
               docker run ghcr.io/cormach/pymx3-docker:latest
               docker push ghcr.io/cormach/pymx3-docker:latest
