--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ jobs:
   publish-pymc3-docker:
     runs-on: ubuntu-latest
     steps:
-      - name Check out the repo
+      - name: Check out the repo
         uses: actions/checkout@v3
       - name: Login to Github Container Registry
         uses: docker/login-action@v1
