--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,9 +12,9 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GIT_CONTAINER_PAT }}
       - name: Build the Docker Image
         run: |
-          docker build . --tag ghcr.io/cormach/pymx3-docker:latest
+          docker build . --tag ghcr.io/cormach/pymc3-docker:latest
           docker run ghcr.io/cormach/pymx3-docker:latest
           docker push ghcr.io/cormach/pymx3-docker:latest
