--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,4 +17,4 @@ jobs:
         run: |
           docker build . --tag ghcr.io/cormach/pymc3-docker:latest
           docker run ghcr.io/cormach/pymx3-docker:latest
-          docker push ghcr.io/cormach/pymx3-docker:latest
+          docker push ghcr.io/cormach/pymc3-docker:latest
