--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,16 +5,23 @@ jobs:
     name: Does this need a name
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
+      -
+        name: Check out the repo
         uses: actions/checkout@v3
-      - name: Login to Github Container Registry
-        uses: docker/login-action@v1
+      - 
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GIT_CONTAINER_PAT }}
-      - name: Build the Docker Image
-        run: |
-          docker build . --tag ghcr.io/cormach/pymc3-docker:latest
-          docker run ghcr.io/cormach/pymc3-docker:latest
-          docker push ghcr.io/cormach/pymc3-docker:latest
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - 
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/pymc3-docker:latest
