including graph-viz
graph-viz allows the visualising of the structure of the pymc3 model

--- a/env.yaml
+++ b/env.yaml
@@ -15,6 +15,7 @@ dependencies:
   - 'cloudpickle' 
   - 'conda-forge::blas=*=openblas' 
   - 'h5py' 
+  - 'python-graphviz'
   - 'ipympl'
   - 'ipywidgets'
   - 'jupyter'
